# cd0424-object-oriented-programming-project

./: .clangd  README.md
starter/: CMakeLists.txt
starter/include/: format.h  linux_parser.h  process.h  processor.h  system.h
starter/src/: format.cpp  linux_parser.cpp  main.cpp  ncurses_display.cpp  process.cpp  processor.cpp  system.cpp
starter/tests/: format_test.cpp  linux_parser_test.cpp
